Changed the fonts

--- a/Attention is all you need/attention_is_all_you_need.ipynb
+++ b/Attention is all you need/attention_is_all_you_need.ipynb
@@ -45,7 +45,7 @@
     "##### Now we saw some brief introduction about RNN and LSTM, let's dive into the main topic, What is a Transformer?\n",
     "\n",
     "# Transfomer\n",
-    "#### Let's see the Architecture given in the paper."
+    "##### Let's see the Architecture given in the paper."
    ]
   },
   {
@@ -94,7 +94,7 @@
     "\n",
     "## 2) Positional Encoding\n",
     "##### Next, we can see that Positional Encoding is added with the Input Embedding. As the name suggests, it is used to encode or give positional information to the Input Embedding. This is required because Transformers uses Attention to get the meaning for sequencing the next word. Let's take a small example: \"Transformers are cool\". Input embedding looks like [0.1, 0.8, 0.2, 0.5], positional encoding looks like [0.1, 0, 0.1, 0] and the added version for this particular example is [0.2, 0.8, 0.3, 0.5]. \n",
-    "#### In the above example, the final vector will now remember the order of the tokens. In simpler words, positional encoding adds the position of the particular token. Why this is useful is discussed in the upcoming sessions.\n",
+    "##### In the above example, the final vector will now remember the order of the tokens. In simpler words, positional encoding adds the position of the particular token. Why this is useful is discussed in the upcoming sessions.\n",
     "\n",
     "##### The alternating use of sine and cosine in positional encoding allows the model to capture relative positions through unique, smooth, and continuous patterns that generalize across sequence lengths. This enables the Transformer to infer the order and distance between tokens without relying on recurrence or convolution."
    ]
@@ -148,15 +148,15 @@
     "\n",
     "##### Q is the Query. It is a matrix of size (n, d_k). It is like the question the model is asking about a word. For intuition purpose, think the model is asking \"What do I need to learn about this word?\". \n",
     "\n",
-    "#### K is the Keys. It is a matrix of size (n, d_k). It is like the summary of the word. Again, for intuition purpose, think the Keys replying to the Model's Queries: \"Here is a summary of different words.\"\n",
+    "##### K is the Keys. It is a matrix of size (n, d_k). It is like the summary of the word. Again, for intuition purpose, think the Keys replying to the Model's Queries: \"Here is a summary of different words.\"\n",
     "\n",
     "#### We transpose the K matrix so the size becomes (d_k, n). Then we perform a scaled dot product.The result would be a (n, n) matrix. What does it signify? Each word tells how similar it is to every other word. The higher the dot product of the two words, the higher the similarity and vice versa. This similarity is called Scores. So, the closer the meaning of the words, the higher the score and vice versa.\n",
     "\n",
-    "#### Softmax function is applied to this product. Softmax reduces to the values such that they sum to 1. In other words, softmax ensures that there is probability distribution. One observation we can make is that when the input is too large, the square matrix would be too big. Hence, the softmax will be closer to 0 or 1. This means that, there would be bias in the model. To solve this, we divide the dot product by a scalar, in this case, sqrt(d_k). We will explore why sqrt(d_k) is used and other interesting observations in the next section. The final result would be of size (n, n)\n",
+    "##### Softmax function is applied to this product. Softmax reduces to the values such that they sum to 1. In other words, softmax ensures that there is probability distribution. One observation we can make is that when the input is too large, the square matrix would be too big. Hence, the softmax will be closer to 0 or 1. This means that, there would be bias in the model. To solve this, we divide the dot product by a scalar, in this case, sqrt(d_k). We will explore why sqrt(d_k) is used and other interesting observations in the next section. The final result would be of size (n, n)\n",
     "\n",
-    "#### V is the Values. It is a matrix of size (n, d_v).  it represents what each word contributes to the final output after attention is applied. \n",
+    "##### V is the Values. It is a matrix of size (n, d_v).  it represents what each word contributes to the final output after attention is applied. \n",
     "\n",
-    "#### Attention is multiplying the softmax weighted scores we obtained above with the Values Matrix. The result would be of size (n, d_v) which is the size of Q, K, V."
+    "##### Attention is multiplying the softmax weighted scores we obtained above with the Values Matrix. The result would be of size (n, d_v) which is the size of Q, K, V."
    ]
   },
   {
@@ -188,7 +188,7 @@
    "id": "90de9735",
    "metadata": {},
    "source": [
-    "#### This is the Scaled Dot Product Attention. All the steps are discussed above except the mask. Mask is mostly used in decoders and is discussed after this section. To recap, Q and K are multiplied to get Scores, the scores are scaled (sqrt(d_k)), then softmax is applied, then this result is multiplied with V to get the final result (Attention)."
+    "##### This is the Scaled Dot Product Attention. All the steps are discussed above except the mask. Mask is mostly used in decoders and is discussed after this section. To recap, Q and K are multiplied to get Scores, the scores are scaled (sqrt(d_k)), then softmax is applied, then this result is multiplied with V to get the final result (Attention)."
    ]
   },
   {
@@ -231,11 +231,11 @@
    "id": "16189526",
    "metadata": {},
    "source": [
-    "#### One thing we haven’t looked at closely yet is the weight matrices used in attention. These are trainable parameters that get updated during training. For example, when we create the query (Q), it’s actually computed by multiplying the input (of size n × d_model) with a weight matrix W_Q (of size d_model × d_k). These weights (W_Q) are what the model learns — they determine how the input should be transformed into a query that captures relevant features. Similarly, keys (K) and values (V) are also computed by multiplying the input with their own weight matrices: W_K and W_V. All of these weight matrices are trainable and adjusted throughout the learning process.\n",
+    "##### One thing we haven’t looked at closely yet is the weight matrices used in attention. These are trainable parameters that get updated during training. For example, when we create the query (Q), it’s actually computed by multiplying the input (of size n × d_model) with a weight matrix W_Q (of size d_model × d_k). These weights (W_Q) are what the model learns — they determine how the input should be transformed into a query that captures relevant features. Similarly, keys (K) and values (V) are also computed by multiplying the input with their own weight matrices: W_K and W_V. All of these weight matrices are trainable and adjusted throughout the learning process.\n",
     "\n",
-    "#### The outputs from each head is concatenated. This again is multiplied with Weight Matrix (W_O). Each head contains the information discussed above(Attention 1 checks for Verb, and so on).\n",
+    "##### The outputs from each head is concatenated. This again is multiplied with Weight Matrix (W_O). Each head contains the information discussed above(Attention 1 checks for Verb, and so on).\n",
     "\n",
-    "#### Masked Multi-Head Attention are the same as discussed above but the only change is that we mask or ignore the words which comes after our current word. This is because to predict the next word, we should not have access to the next word while training the model. If the model can access the next words, it would simply copy them rather than learn them."
+    "##### Masked Multi-Head Attention are the same as discussed above but the only change is that we mask or ignore the words which comes after our current word. This is because to predict the next word, we should not have access to the next word while training the model. If the model can access the next words, it would simply copy them rather than learn them."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "## 4) Add and Normalize step\n",
     "\n",
-    "#### We can see Add & Norm after Multi-Head Attention and then Feed Forward Layer. The Add is called the residual connection. The function of Add is to add the input with the result obtained from Attention or from Feed Forward. This is because having only the context is not useful, and it helps keep the original information. Normalize is done because we need to control the gradient (slope) during the training process for optimized results."
+    "##### We can see Add & Norm after Multi-Head Attention and then Feed Forward Layer. The Add is called the residual connection. The function of Add is to add the input with the result obtained from Attention or from Feed Forward. This is because having only the context is not useful, and it helps keep the original information. Normalize is done because we need to control the gradient (slope) during the training process for optimized results."
    ]
   },
   {
@@ -255,9 +255,9 @@
    "source": [
     "## 5) Feed Forward Network\n",
     "\n",
-    "#### Now we have the output of the Attention. This contains the information of the word as well as the context. But the model needs to learn how to use these contexts to make the connections. \n",
+    "##### Now we have the output of the Attention. This contains the information of the word as well as the context. But the model needs to learn how to use these contexts to make the connections. \n",
     "\n",
-    "#### The Feed Forward Network expands the dimensionality to a higher space and then learns complex patterns about the word and it's context, then it reduces the size as before. In other words, it injects meaning to the context obtained from the Attention."
+    "##### The Feed Forward Network expands the dimensionality to a higher space and then learns complex patterns about the word and it's context, then it reduces the size as before. In other words, it injects meaning to the context obtained from the Attention."
    ]
   },
   {
@@ -300,19 +300,19 @@
     "## Building the Transformer\n",
     "\n",
     "\n",
-    "#### Now we have all the concepts we require to build our transformer. If we see the architecture, we can see two blocks, the left block is the Encoder while the right block is the Decoder. \n",
+    "##### Now we have all the concepts we require to build our transformer. If we see the architecture, we can see two blocks, the left block is the Encoder while the right block is the Decoder. \n",
     "\n",
     "##### Encoders consists of [(Multi-Head Attention -> Add & Norm) -> (Feed Forward Network -> Add & Norm)]\n",
     "##### Decoders consists of [(Masked Multi-head Attention -> Add & Norm) -> (Multi-Head Attention -> Add & Norm) -> (Feed Forward Network -> Add & Norm)]\n",
-    "#### Transformer Architecture goes like Input -> Encoder -> Decoder -> Softmax -> Output\n",
+    "##### Transformer Architecture goes like Input -> Encoder -> Decoder -> Softmax -> Output\n",
     "\n",
-    "#### Encoders can be thought of encoding the input into meaning context vectors. Decoders can be thought of taking this context vectors and the input and give the desired output.\n",
+    "##### Encoders can be thought of encoding the input into meaning context vectors. Decoders can be thought of taking this context vectors and the input and give the desired output.\n",
     "\n",
-    "#### Example, if the task is to translate from English to any other language (let's say French for example), then encoders take the input sentence then encodes each word by giving a context vector as output. The, Decoder takes this vector to generate the required French words one word at a time.\n",
+    "##### Example, if the task is to translate from English to any other language (let's say French for example), then encoders take the input sentence then encodes each word by giving a context vector as output. The, Decoder takes this vector to generate the required French words one word at a time.\n",
     "\n",
-    "#### Sofmax turns the output into probabilities, the word with the highest probability is chosen as the next word.\n",
+    "##### Sofmax turns the output into probabilities, the word with the highest probability is chosen as the next word.\n",
     "\n",
-    "#### There are Training and Testing phase after this. But it is like any other model, we train, optimize the weights, then test the model."
+    "##### There are Training and Testing phase after this. But it is like any other model, we train, optimize the weights, then test the model."
    ]
   },
   {
@@ -320,7 +320,7 @@
    "id": "aadf843b",
    "metadata": {},
    "source": [
-    "#### And that’s the magic behind Transformers — turning raw input into meaningful output by learning context, attention, and patterns, step by step.\n"
+    "##### And that’s the magic behind Transformers — turning raw input into meaningful output by learning context, attention, and patterns, step by step.\n"
    ]
   }
  ],
