Changed Font in Attention paragraph

--- a/Attention is all you need/attention_is_all_you_need.ipynb
+++ b/Attention is all you need/attention_is_all_you_need.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "##### K is the Keys. It is a matrix of size (n, d_k). It is like the summary of the word. Again, for intuition purpose, think the Keys replying to the Model's Queries: \"Here is a summary of different words.\"\n",
     "\n",
-    "#### We transpose the K matrix so the size becomes (d_k, n). Then we perform a scaled dot product.The result would be a (n, n) matrix. What does it signify? Each word tells how similar it is to every other word. The higher the dot product of the two words, the higher the similarity and vice versa. This similarity is called Scores. So, the closer the meaning of the words, the higher the score and vice versa.\n",
+    "##### We transpose the K matrix so the size becomes (d_k, n). Then we perform a scaled dot product.The result would be a (n, n) matrix. What does it signify? Each word tells how similar it is to every other word. The higher the dot product of the two words, the higher the similarity and vice versa. This similarity is called Scores. So, the closer the meaning of the words, the higher the score and vice versa.\n",
     "\n",
     "##### Softmax function is applied to this product. Softmax reduces to the values such that they sum to 1. In other words, softmax ensures that there is probability distribution. One observation we can make is that when the input is too large, the square matrix would be too big. Hence, the softmax will be closer to 0 or 1. This means that, there would be bias in the model. To solve this, we divide the dot product by a scalar, in this case, sqrt(d_k). We will explore why sqrt(d_k) is used and other interesting observations in the next section. The final result would be of size (n, n)\n",
     "\n",
