Made changes in README.md and attention_is_all_you_need.ipynb

--- a/Attention is all you need/attention_is_all_you_need.ipynb
+++ b/Attention is all you need/attention_is_all_you_need.ipynb
@@ -21,9 +21,9 @@
    "id": "3787f4a3",
    "metadata": {},
    "source": [
-    "# Breif introduction about the models before Transformers came around:\n",
+    "# Brief introduction about the models before Transformers came around:\n",
     "\n",
-    "##### Let us assume this scenario, Given a sentence, predict the most probable word as the output. Example: \"The Earth is in the\" should predict the next words as \"solar system\". How does the AI model know this? We provide the training data and the model learns from it. There are models liks RNN, LSTM to do this task. \n",
+    "##### Let us assume this scenario, Given a sentence, predict the most probable word as the output. Example: \"The Earth is in the\" should predict the next words as \"solar system\". How does the AI model know this? We provide the training data and the model learns from it. There are models like RNN, LSTM to do this task. \n",
     "\n",
     "## Limitations of RNNs and LSTMs:\n",
     "##### RNNs cannot 'remember' the previous words for a long time. What this means is that, it can't use the long-term context. Assume, there is a long sentence, and the context for the next word is dependent on a few words at the start of the sentence, the RNN most probably won't be able to use this context. This happens because of Vanishing and Exploding Gradients. \n",
@@ -44,7 +44,7 @@
    "source": [
     "##### Now we saw some brief introduction about RNN and LSTM, let's dive into the main topic, What is a Transformer?\n",
     "\n",
-    "# Transfomer\n",
+    "# Transformer\n",
     "##### Let's see the Architecture given in the paper."
    ]
   },
@@ -308,7 +308,7 @@
     "\n",
     "##### Encoders can be thought of encoding the input into meaning context vectors. Decoders can be thought of taking this context vectors and the input and give the desired output.\n",
     "\n",
-    "##### Example, if the task is to translate from English to any other language (let's say French for example), then encoders take the input sentence then encodes each word by giving a context vector as output. The, Decoder takes this vector to generate the required French words one word at a time.\n",
+    "##### Example, if the task is to translate from English to any other language (let's say French for example), then encoders take the input sentence then encodes each word by giving a context vector as output. Then, the Decoder takes this vector to generate the required French words one word at a time.\n",
     "\n",
     "##### Sofmax turns the output into probabilities, the word with the highest probability is chosen as the next word.\n",
     "\n",
