Corrected Spelling Mistakes

--- a/Attention is all you need/attention_is_all_you_need.ipynb
+++ b/Attention is all you need/attention_is_all_you_need.ipynb
@@ -88,7 +88,7 @@
     "##### Let's discuss how the input is processed in the sequential flow. \n",
     "\n",
     "## 1) Input Embedding\n",
-    "##### First, the input is embedded (Input Embedding block). This is required as most of the machine learning akgorithms needs vectors. So, the text input gets converted to vectors.\n",
+    "##### First, the input is embedded (Input Embedding block). This is required as most of the machine learning algorithms needs vectors. So, the text input gets converted to vectors.\n",
     "##### Eg: \"Hello, How are you?\" gets converted to [0.8, 0.6, 0.2, 0.1]\n",
     "Note: The above vector is for example purpose, the real values are different but the process on how it is encoded remains the same, that is, input gets embedded into a vector\n",
     "\n",
