Added DPR and BART

--- a/BERT/bert.ipynb
+++ b/BERT/bert.ipynb
@@ -58,7 +58,7 @@
    "id": "92310eb1",
    "metadata": {},
    "source": [
-    "##### To understand about why BERT uses this architecture, we need to understand about what were/are the methods available before BERT.\n",
+    "##### To understand why BERT uses this architecture, we need to understand about what were/are the methods available before BERT.\n",
     "\n",
     "# Brief introduction about the approaches available:\n",
     "\n",
@@ -133,7 +133,7 @@
     "##### This is used to label the separated segments. [SEP] in token embedding seperates the token. If we see the example above, E_A and E_B are two segments.\n",
     "\n",
     "# 3) Position Embedding\n",
-    "##### This is used to capture the order of the tokens. Transformers have no built-in understanding of word order. For example, assume the input is \"The cat is on the mat\", the Transformer will treat the sentence in any order as the same as it doesn't have positional context of the words. So, \"The cat on is mat\" will be treated similar to the original input. Hence, Position Emebedding is added so the order of the tokens will be there while learning phase. This allows BERT to capture relative and absolute positions. \n",
+    "##### This is used to capture the order of the tokens. Transformers have no built-in understanding of word order. For example, assume the input is \"The cat is on the mat\", the Transformer will treat the sentence in any order as the same as it doesn't have positional context of the words. So, \"The cat on is mat\" will be treated similar to the original input. Hence, Position Emebedding is added so the order of the tokens will be there in the learning phase. This allows BERT to capture relative and absolute positions. \n",
     "\n",
     "\n",
     "##### The final input representation is the sum of Token Embedding, Segmentation Embedding, and Position Embedding."
