Added Retrieval Augmented Generation (RAG)

--- a/BART/bart.ipynb
+++ b/BART/bart.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "# BART (Bidirectional and AutoRegressive Transformer)\n",
     "\n",
-    "##### BART uses BERT like Encoder and GPT like Decoder. It is trained on corrupted documents and once pre-trained, it is used in various tasks like Translation, Summarization, etc.\n",
-    "##### Let's look at the comparision between BART and BERT, GPT"
+    "#### BART uses BERT like Encoder and GPT like Decoder. It is trained on corrupted documents and once pre-trained, it is used in various tasks like Translation, Summarization, etc.\n",
+    "#### Let's look at the comparision between BART and BERT, GPT"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "id": "b01084c2",
    "metadata": {},
    "source": [
-    "##### As we can see in the image, BERT uses encoder, GPT uses Decoder but BART uses both. The difference between BART and the traditional Transformer is the way how BART is trained. \n",
+    "#### As we can see in the image, BERT uses encoder, GPT uses Decoder but BART uses both. The difference between BART and the traditional Transformer is the way how BART is trained. \n",
     "\n",
-    "##### It has two phases: Pre-training and Fine-tuning"
+    "#### It has two phases: Pre-training and Fine-tuning"
    ]
   },
   {
@@ -99,27 +99,27 @@
    "id": "79235b15",
    "metadata": {},
    "source": [
-    "##### There are 5 Transformations given in the paper:\n",
+    "#### There are 5 Transformations given in the paper:\n",
     "\n",
     "# i) Token Masking\n",
-    "##### It is similar to BERT's Masked Language Model (MLM). We use the [MASK] tag/token to hide the word and then BART must learn and predict the word.\n",
-    "##### Example: \"Earth is in the [MASK] System\" -> Solar\n",
+    "#### It is similar to BERT's Masked Language Model (MLM). We use the [MASK] tag/token to hide the word and then BART must learn and predict the word.\n",
+    "#### Example: \"Earth is in the [MASK] System\" -> Solar\n",
     "\n",
     "# ii) Sentence Permuation\n",
-    "##### Sentences are shuffled randomly.\n",
-    "##### Example: \"Earth is in the Solar System. It is one of the planets in the Solar System\" -> \"It is one of the planets in the Solar System. Earth is in the Solar System\"\n",
+    "#### Sentences are shuffled randomly.\n",
+    "#### Example: \"Earth is in the Solar System. It is one of the planets in the Solar System\" -> \"It is one of the planets in the Solar System. Earth is in the Solar System\"\n",
     "\n",
     "# iii) Document Rotation\n",
-    "##### The beginning of the sentence is rotated so that BART learns how the beginning of a sentence looks like.\n",
-    "##### Example: \"Earth is in the Solar System.\" -> \"the Solar System. Earth is in\"\n",
+    "#### The beginning of the sentence is rotated so that BART learns how the beginning of a sentence looks like.\n",
+    "#### Example: \"Earth is in the Solar System.\" -> \"the Solar System. Earth is in\"\n",
     "\n",
     "# iv) Token Detection\n",
-    "##### Random tokens are removed. This is hard because BART doesn't know which word (token) is removed.\n",
-    "##### Example: \"Earth is in the Solar System.\" -> \"Earth is in the System.\"\n",
+    "#### Random tokens are removed. This is hard because BART doesn't know which word (token) is removed.\n",
+    "#### Example: \"Earth is in the Solar System.\" -> \"Earth is in the System.\"\n",
     "\n",
     "# v) Text Infilling\n",
-    "##### Random span of text is replaced by the [MASK] token\n",
-    "##### Example: \"Earth is in [MASK] System.\" -> \"Earth is in the Solar System.\""
+    "#### Random span of text is replaced by the [MASK] token\n",
+    "#### Example: \"Earth is in [MASK] System.\" -> \"Earth is in the Solar System.\""
    ]
   },
   {
@@ -130,10 +130,10 @@
     "# 2) Fine-tuning\n",
     "\n",
     "\n",
-    "##### BART can be used in many downstream tasks.\n",
+    "#### BART can be used in many downstream tasks.\n",
     "\n",
     "# i)  Sequence Classification Tasks\n",
-    "##### Classifies the input into categories. Example taks are Sentiment Analysus and NLI."
+    "#### Classifies the input into categories. Example taks are Sentiment Analysus and NLI."
    ]
   },
   {
@@ -165,7 +165,7 @@
    "id": "99b78e4c",
    "metadata": {},
    "source": [
-    "##### In the above image, BART achieved classification using Encoder and Decoder by providing the same input. Although, Encoder is only enough, Decoder is used to maintain uniformity."
+    "#### In the above image, BART achieved classification using Encoder and Decoder by providing the same input. Although, Encoder is only enough, Decoder is used to maintain uniformity."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "metadata": {},
    "source": [
     "# ii) Token Classification\n",
-    "##### Classifies each individual word or token. It's like the model is asking \"For each word, is it the answer? or a name? etc\""
+    "#### Classifies each individual word or token. It's like the model is asking \"For each word, is it the answer? or a name? etc\""
    ]
   },
   {
@@ -183,8 +183,8 @@
    "metadata": {},
    "source": [
     "# iii) Sequence Generation\n",
-    "##### Generates new words based on the previous words\n",
-    "##### Example: \"Hello, How are\" -> \"you\""
+    "#### Generates new words based on the previous words\n",
+    "#### Example: \"Hello, How are\" -> \"you\""
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "source": [
     "# iv) Machine Translation\n",
-    "##### Translating a non-English language into English."
+    "#### Translating a non-English language into English."
    ]
   },
   {
@@ -225,7 +225,7 @@
    "id": "8568a884",
    "metadata": {},
    "source": [
-    "##### As given in the image, BART uses a Randomly Intiated Encoder. This new encoder is used to understand the non-english language. Then BART's decoder is used to generate the english translation."
+    "#### As given in the image, BART uses a Randomly Intiated Encoder. This new encoder is used to understand the non-english language. Then BART's decoder is used to generate the english translation."
    ]
   },
   {
@@ -234,8 +234,15 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "##### BART has the strengths of both BERT-like Encoders and GPT-like Decoders. It can perform a variety of BERT tasks such as classification, NLI, etc and also GPT tasks like Text generation, Translation, etc."
+    "\n",
+    "#### BART has the strengths of both BERT-like Encoders and GPT-like Decoders. It can perform a variety of BERT tasks such as classification, NLI, etc and also GPT tasks like Text generation, Translation, etc."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c14e30e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
