--- a/Dense Passage Retrieval/dense_passage_retrieval.ipynb
+++ b/Dense Passage Retrieval/dense_passage_retrieval.ipynb
@@ -22,12 +22,12 @@
    "source": [
     "# Terminologies before understanding this paper:\n",
     "\n",
-    "##### 1) Question: The input provided by the user.\n",
-    "##### 2) Answer: The correct response to the question.\n",
-    "##### 3) Context: A text snippet which contains answer or helps infer it.\n",
-    "##### 4) Passage: Small, fixed length of text. If answer is present, then it is known as positive. Else, it is known as negative.\n",
-    "##### 5) Document: A full article or page from the Corpus. It is long and needs to be broken into passages for retrieval.\n",
-    "##### 6) Corpus: The full set of documents."
+    "#### 1) Question: The input provided by the user.\n",
+    "#### 2) Answer: The correct response to the question.\n",
+    "#### 3) Context: A text snippet which contains answer or helps infer it.\n",
+    "#### 4) Passage: Small, fixed length of text. If answer is present, then it is known as positive. Else, it is known as negative.\n",
+    "#### 5) Document: A full article or page from the Corpus. It is long and needs to be broken into passages for retrieval.\n",
+    "#### 6) Corpus: The full set of documents."
    ]
   },
   {
@@ -37,14 +37,14 @@
    "source": [
     "# Problems with Sparse Representation Models\n",
     "\n",
-    "##### Earlier, Open-domain Question Answering is done using Sparse Representation models like TF-IDF. It is used to find the answer to the question by searching the keywords asked in the question. While this is useful, one main problem occurs when the model cannot perform well if the question and the answer in the passage is similar in meaning but uses different words. \n",
+    "#### Earlier, Open-domain Question Answering is done using Sparse Representation models like TF-IDF. It is used to find the answer to the question by searching the keywords asked in the question. While this is useful, one main problem occurs when the model cannot perform well if the question and the answer in the passage is similar in meaning but uses different words. \n",
     "\n",
-    "##### For example: \n",
-    "##### Question: \"Who is the bad guy in lord of the rings?”\n",
-    "##### Context: \"Sala Baker is best known for portraying the villain Sauron in the Lord of the Rings trilogy\"\n",
-    "##### In this case, the sparse representation models may not answer the question from the context. This is because \"bad guy\" and \"villain\" have similar meaning but they are different words.\n",
+    "### For example: \n",
+    "#### Question: \"Who is the bad guy in lord of the rings?”\n",
+    "#### Context: \"Sala Baker is best known for portraying the villain Sauron in the Lord of the Rings trilogy\"\n",
+    "#### In this case, the sparse representation models may not answer the question from the context. This is because \"bad guy\" and \"villain\" have similar meaning but they are different words.\n",
     "\n",
-    "##### Hence, Sparse Models depend on the exact word and struggles with synonyms."
+    "#### Hence, Sparse Models depend on the exact word and struggles with synonyms."
    ]
   },
   {
@@ -54,9 +54,9 @@
    "source": [
     "# How Dense Passage Retrieval solves the issue faced by Sparse Representation Models?\n",
     "\n",
-    "##### Dense Passage Retrieval (DPR) is a dense representation of the passage. The main goal of Open Quetion-answering is two parts: Retrieval and Reader. Retrieval is the part which searches or retrieves the top k relevent passages and the reader reads each passage for giving  answer. DPR is a retriever. DPR retrieves top k passages from M passages. In this paper, M = 21 million and k is between 20 and 100. \n",
+    "#### Dense Passage Retrieval (DPR) is a dense representation of the passage. The main goal of Open Quetion-answering is two parts: Retrieval and Reader. Retrieval is the part which searches or retrieves the top k relevent passages and the reader reads each passage for giving  answer. DPR is a retriever. DPR retrieves top k passages from M passages. In this paper, M = 21 million and k is between 20 and 100. \n",
     "\n",
-    "##### Dense Passage Retriever uses two BERT models - one for Passage (E_P) and one for question (E_Q). Each passage give a 768-dimension representation vector. Each vector is then stored as index. When a question is asked, it passes through the Encoder (E_Q) which gives 768-dimension representation vector for the question. This question vector is then used to find the top k similar passages through the index."
+    "#### Dense Passage Retriever uses two BERT models - one for Passage (E_P) and one for question (E_Q). Each passage give a 768-dimension representation vector. Each vector is then stored as index. When a question is asked, it passes through the Encoder (E_Q) which gives 768-dimension representation vector for the question. This question vector is then used to find the top k similar passages through the index."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "9ce9f227",
    "metadata": {},
    "source": [
-    "##### To find how close or similar the meanings of two words are, we can use simlarity. It's just the dot product of the question and passage vectors. This is useful because with this, we can find the meanings of words which has similar meaning but are different words like 'bad guy' and 'villain' in the example above. The dot product works because, it the words have similar meaning, their scores are high."
+    "#### To find how close or similar the meanings of two words are, we can use simlarity. It's just the dot product of the question and passage vectors. This is useful because with this, we can find the meanings of words which has similar meaning but are different words like 'bad guy' and 'villain' in the example above. The dot product works because, it the words have similar meaning, their scores are high."
    ]
   },
   {
@@ -98,7 +98,7 @@
    "source": [
     "# Training\n",
     "\n",
-    "##### The passage which contains the answer is called a positive passage and the passage which doesn't contain the answer is called a negative passage. During the training phase, we take one positive passage and n negative passages, then perform a similarity score between them. Then we use negative log likelihood loss. Let's look at the loss function:"
+    "#### The passage which contains the answer is called a positive passage and the passage which doesn't contain the answer is called a negative passage. During the training phase, we take one positive passage and n negative passages, then perform a similarity score between them. Then we use negative log likelihood loss. Let's look at the loss function:"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "64e8a44f",
    "metadata": {},
    "source": [
-    "##### As we can see, we have one positive passage (p_i+) and n negative passages (p_i,n-). The log takes softmax output as input. Since, softmax gives probabilities, we can use log so that when softmax is 1, we can use log(1) which is 0 which means the loss is 0. We use negative log because the log function is <= 0. So, the negative passages will have lower scores than positive passage. Hence, we use the negative sign. This ensures that the log likehihood is maximised while the negative log-likelihood is minimized. "
+    "#### As we can see, we have one positive passage (p_i+) and n negative passages (p_i,n-). The log takes softmax output as input. Since, softmax gives probabilities, we can use log so that when softmax is 1, we can use log(1) which is 0 which means the loss is 0. We use negative log because the log function is <= 0. So, the negative passages will have lower scores than positive passage. Hence, we use the negative sign. This ensures that the log likehihood is maximised while the negative log-likelihood is minimized. "
    ]
   },
   {
@@ -170,7 +170,7 @@
    "id": "863feaf7",
    "metadata": {},
    "source": [
-    "##### As we can see, the Top-k Accuracy increases as we increase the value of k. In other words, retrieving top k1 passages has higher chance of finding an answer than retrieving top k passages where k<k1. But as we can see, there is a saturation point wherein, if we keep increasing the value of k, the accuracy might not increase much. "
+    "#### As we can see, the Top-k Accuracy increases as we increase the value of k. In other words, retrieving top k1 passages has higher chance of finding an answer than retrieving top k passages where k<k1. But as we can see, there is a saturation point wherein, if we keep increasing the value of k, the accuracy might not increase much. "
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "##### There are two options for finding answers from the given M passages. One is to read the passage one by one. This is highly inefficient because reading each passage takes so much time. The other approach is to retrieve top k passages + read those top k passages. This is faster because we index the encoded passages. So, given a question, we encode the meaning of the question and then perform similarity search with all the encoded passages and then retrieve the top k passages. This is how Dense Passage Retriever (DPR) works. As the number of retrieved passages increase, the accuracy increase but there is a saturation point where even if we increase the k, the accuracy might not increase much."
+    "#### There are two options for finding answers from the given M passages. One is to read the passage one by one. This is highly inefficient because reading each passage takes so much time. The other approach is to retrieve top k passages + read those top k passages. This is faster because we index the encoded passages. So, given a question, we encode the meaning of the question and then perform similarity search with all the encoded passages and then retrieve the top k passages. This is how Dense Passage Retriever (DPR) works. As the number of retrieved passages increase, the accuracy increase but there is a saturation point where even if we increase the k, the accuracy might not increase much."
    ]
   }
  ],
