--- a/Vq-Wav2Vec/vq-wav2vec.ipynb
+++ b/Vq-Wav2Vec/vq-wav2vec.ipynb
@@ -350,7 +350,13 @@
    "metadata": {},
    "source": [
     "#### This makes sure the encoder outputs (z) are close to centroid (codeword). \n",
-    "#### The stop-gradient on z_cap (sg(z_cap)) means only the encoder parameters are updated."
+    "#### The stop-gradient on z_cap (sg(z_cap)) means only the encoder parameters are updated.\n",
+    "#### γ is a hyperparameter where it balances the strength of this loss relative to the other terms \n",
+    "#### If γ is too small, the encoder outputs (z) may not stay close to the discrete codewords (z_cap), causing instability and large quantization errors.\n",
+    "#### If γ is too large, the encoder might focus only on matching codewords and it may sacrifice useful predictive features.\n",
+    "\n",
+    "\n",
+    "#### All the three terms are added because the end goal is to minimize the loss. So everything is added and then the model is trainined to minimize this total loss."
    ]
   },
   {
