changed RAG QA section

--- a/RAG/rag.ipynb
+++ b/RAG/rag.ipynb
@@ -249,10 +249,8 @@
     "#### a) Extractive QA: It finds the exact answer span from retrieved documents. (no generator)\n",
     "#### b) Closed-Book QA: Relies only on the model's internal memeory (no retriever)\n",
     "\n",
-    "#### RAG can combine Retrieval + Generation so it can both find and phease the answer.\n",
-    "#### Exact Match (EM) metric is used. It tells the percentage of answers exactly matching the correct answer.\n",
-    "\n",
-    "#### Result: "
+    "#### RAG can combine Retrieval + Generation so it can both find and phrase the answer.\n",
+    "#### Exact Match (EM) metric is used. It tells the percentage of answers exactly matching the correct answer."
    ]
   },
   {
